# safe-ai-skill

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  install.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  npm-e2e.yml  release.yml
crates/engine/: ARCHITECTURE.md  Cargo.toml
crates/engine/src/: audit.rs  context.rs  error.rs  gate.rs  grants.rs  io.rs  lib.rs  main.rs  mode.rs  policy.rs  promptguard.rs  redact.rs  registry.rs  relax.rs  rugcheck.rs  session.rs  spend.rs  squads.rs
crates/engine/src/gates/: bash.rs  mcp.rs  mod.rs  read.rs  secrets.rs
crates/engine/src/verify/: heuristics.rs  lockfile.rs  mod.rs  osv.rs  provenance.rs
crates/engine/tests/: bootstrap_sandbox.rs  coexistence.rs  ext_submodule_verify.rs  gates.rs  install_sandbox.rs  mcp_gating.rs  registry_catalog.rs  verify_drift.rs
crates/engine/tests/common/: mod.rs
docs/: architecture.md  solana-new-ascii-art.md  solana-new-security.md  solana-old.md  usage.md
npm/: .gitignore  README.md  package.json
npm/scripts/: postinstall.js
plugins/safe-ai-skill/.claude-plugin/: plugin.json
plugins/safe-ai-skill/hooks/: hooks.json
plugins/safe-ai-skill/policy/: default.policy.yaml
plugins/safe-solana-ai/.claude-plugin/: plugin.json
plugins/safe-solana-ai/hooks/: hooks.json
plugins/safe-solana-ai/policy/: default.policy.yaml
scripts/: check-versions.sh
